deployment-example/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-service
  namespace: webapp
spec:
  type: ClusterIP
  selector:
    app: red-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http

---
apiVersion: v1
kind: Service
metadata:
  name: green-service
  namespace: webapp
spec:
  type: ClusterIP
  selector:
    app: green-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http

---
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  namespace: webapp
spec:
  type: ClusterIP
  selector:
    app: blue-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
